--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <img src="images/Indian-chef.jpg" alt="" height="500px" width="500px">
     <ul>
       <li><a href="recipes/veggie-burger.html">Veggie Burger</a></li>
+      <li><a href = "recipes/fluffy-french-toast.html">Fluffy French Toast</a></li>
+      <li><a href="recipes/butter-snow-flakes.html">Butter Snow Flakes</a></li>
     </ul>
   </body>
 </html>
